fix user profile title overflow

--- a/public/stylesheets/user-show.css
+++ b/public/stylesheets/user-show.css
@@ -7,7 +7,7 @@ div.user_show .staff {
   margin-bottom: 1em;
 }
 div.user_show div.content_box_top > span {
-  margin-left: 1em;
+  margin-left: 10px;
   font-size: 1.6em;
   color: #afafaf;
 }
